k8s/minikube/db.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: db
  name: db
  namespace: default
spec:
  serviceName: "db"
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: 9AFSpG0Gp/S816njABoY
        - name: MYSQL_DATABASE
          value: sdmgr
        - name: MYSQL_USER
          value: sdmgr
        - name: MYSQL_PASSWORD
          value: sdmgr
        image: mariadb
        imagePullPolicy: Always
        name: db
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          procMount: Default
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          runAsUser: 0
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /data/sdmgr/mysql
          type: ""
        name: data
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: db
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: db-ext
  namespace: default
spec:
  ports:
  - nodePort: 30306
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: db
  sessionAffinity: None
  type: NodePort
