k8s/minikube/api.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sdmgr-api
  name: api
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sdmgr-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sdmgr-api
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: mysql+mysqldb://sdmgr:sdmgr@db/sdmgr
        - name: OPENAPI_PREFIX
          value: /api/v1
        image: rossigee/sdmgr:latest
        imagePullPolicy: Always
        name: api
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          procMount: Default
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          runAsUser: 0
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: sdmgr-api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sdmgr
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sdmgr.local
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8000
        path: /api/v1
  tls:
  - hosts:
    - sdmgr.local
    secretName: sdmgr-tls
