k8s/minikube/ui.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sdmgr-ui
  name: ui
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sdmgr-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sdmgr-ui
    spec:
      containers:
      - env:
        - name: API_URL
          value: https://sdmgr.local/
        image: rossigee/sdmgr-ui:latest
        imagePullPolicy: Always
        name: ui
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          procMount: Default
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          runAsUser: 0
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sdmgr-ui
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sdmgr-ui
  namespace: default
spec:
  rules:
  - host: sdmgr.local
    http:
      paths:
      - backend:
          serviceName: ui
          servicePort: 80
        path: /
  tls:
  - hosts:
    - sdmgr.local
    secretName: sdmgr-tls
